--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8002
 app.name=Auth Service
-server.servlet.context-path=/userauth
-spring.application.name=userauth
+server.servlet.context-path=/manitou
+spring.application.name=manitou
 jwt.secret=transportmanagement
 jwt.get.token.uri=/authenticate
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
@@ -14,3 +14,6 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
+#Department
+DEPARTMENT=FIN~Finance@OPD~Operational@ADMIN~Administrative
